# lycc

./: LICENSE  Makefile  dune-project  dune-workspace
lib/: dune  symtbl.ml  tyylattice.ml
lib/frontend/: ast.ml  token.ml
lib/preprocessor/: conditionals.ml  directive.ml  line_splicing.ml  macro_expansion.ml  macro_table.ml  pipeline.ml  pp_lexer.ml  preprocessor.mli
lib/semantic/: conversions.ml  type_checker.ml  types.ml
